# QCS

./: .gitignore  LICENSE  README.md  idea.py  pyproject.toml
src/QCS/: driver.py  gensat.py  qcs.py
src/QCS/formulas/: gen.py
